Add bin to package

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "license": "MIT",
   "author": "GLD5000",
   "type": "commonjs",
+  "bin": "bin/npmInit.mjs",
   "main": "src/index.mjs",
   "scripts": {
     "test": "node test.mjs"
