--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "test": "node test.mjs"
   },
   "dependencies": {
-    "@gld5000-cli/readline": "^1.x"
+    "@gld5000-cli/readline": "^1.0.6",
+    "@gld5000k/timestamp": "^1.0.9"
   }
 }
